fixed text align in cols

--- a/src/pages/DashboardPage/Dashboard.module.css
+++ b/src/pages/DashboardPage/Dashboard.module.css
@@ -8,7 +8,6 @@
 }
 
 .text {
-    grid-column: 1 / span 2;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -37,4 +36,8 @@
     justify-content: center;
     align-items: center;
     margin: 15px 10px;
+}
+
+.colText {
+    text-align: center;
 }
